==> ptquang2000/abpc/node/lib/vl53l1x/vl53l1_platform.c <==
#include "driver/i2c.h"
#include "hal/i2c_types.h"
#include "freertos/task.h"
#define I2C_MASTER_NUM              I2C_NUM_0
#define I2C_SDA_IO                  GPIO_NUM_33
#define I2C_SCL_IO                  GPIO_NUM_32
#define I2C_MASTER_TX_BUF_DISABLE   0
#define I2C_MASTER_RX_BUF_DISABLE   0
#define WRITE_BIT  					I2C_MASTER_WRITE /*!< I2C master write */
#define READ_BIT   					I2C_MASTER_READ  /*!< I2C master read */
#define ACK_CHECK_EN   				0x1     /*!< I2C master will check ack from slave*/
#define ACK_CHECK_DIS  				0x0     /*!< I2C master will not check ack from slave */
#define ERROR_TEXT_LENGTH 			1024
#include <stdio.h>      // sprintf(), vsnprintf(), printf()
#include <stdint.h>
#include <string.h>     // strncpy(), strnlen()
#define snprintf _snprintf
#include "vl53l1_platform.h"
#include "vl53l1_platform_log.h"
	#include "vl53l1_register_strings.h"
	#define VL53L1_get_register_name(a,b)
#define  VL53L1_COMMS_CHUNK_SIZE  56
#define  VL53L1_COMMS_BUFFER_SIZE 64
#define GPIO_INTERRUPT          RS_GPIO62
#define GPIO_POWER_ENABLE       RS_GPIO60
#define GPIO_XSHUTDOWN          RS_GPIO61
#define GPIO_SPI_CHIP_SELECT    RS_GPIO51
#define trace_print(level, ...) \
	_LOG_TRACE_PRINT(VL53L1_TRACE_MODULE_PLATFORM, \
	level, VL53L1_TRACE_FUNCTION_NONE, ##__VA_ARGS__)
#define trace_i2c(...) \
	_LOG_TRACE_PRINT(VL53L1_TRACE_MODULE_NONE, \
	VL53L1_TRACE_LEVEL_NONE, VL53L1_TRACE_FUNCTION_I2C, ##__VA_ARGS__)

VL53L1_Error VL53L1_WriteMulti(
	VL53L1_Dev_t *pdev,
	uint16_t      index,
	uint8_t      *pdata,
	uint32_t      count)
{
	VL53L1_Error status         = VL53L1_ERROR_NONE;
	uint32_t     position       = 0;
	uint32_t     data_size      = 0;

	// char   comms_error_string[ERROR_TEXT_LENGTH];

	_LOG_STRING_BUFFER(register_name);
	_LOG_STRING_BUFFER(value_as_str);

	if(global_comms_type == VL53L1_I2C)
	{
		i2c_cmd_handle_t i2c_cmd_handle = i2c_cmd_link_create();
		esp_err_t result = i2c_master_start(i2c_cmd_handle);
		result += i2c_master_write_byte(i2c_cmd_handle, (pdev->i2c_slave_address << 1) | WRITE_BIT, ACK_CHECK_EN);
		result += i2c_master_write_byte(i2c_cmd_handle, (uint8_t)index >> 8, ACK_CHECK_EN);
		result += i2c_master_write_byte(i2c_cmd_handle, (uint8_t)index, ACK_CHECK_EN);
		
		for(position=0; position<count; position+=VL53L1_COMMS_CHUNK_SIZE)
		{
			if (count > VL53L1_COMMS_CHUNK_SIZE)
			{
				if((position + VL53L1_COMMS_CHUNK_SIZE) > count)
				{
					data_size = count - position;
				}
				else
				{
					data_size = VL53L1_COMMS_CHUNK_SIZE;
				}
			}
			else
			{
				data_size = count;
			}

			if (status == VL53L1_ERROR_NONE)
			{
				// if( RANGING_SENSOR_COMMS_Write_CCI(
				// 				pdev->i2c_slave_address,
				// 				0,
				// 				index+position,
				// 				pdata+position,
				// 				data_size) != 0 )
				// {
				// 	status = VL53L1_ERROR_CONTROL_INTERFACE;
				// }
				if (i2c_master_write(
					i2c_cmd_handle,
					pdata + position,
					data_size,
					ACK_CHECK_EN
					) != ESP_OK)
				{
					status = VL53L1_ERROR_CONTROL_INTERFACE;
				}
			}

#ifdef VL53L1_LOG_ENABLE
			if (status == VL53L1_ERROR_NONE) {
				char* pvalue_as_str;
				uint32_t i;

				/*lint --e{661} Suppress out of bounds walkthrough warning */
				/*lint --e{662} Suppress out of bounds walkthrough warning */

				// Build  value as string;
				pvalue_as_str =  value_as_str;
				for(i = 0 ; i < data_size ; i++)
				{
						sprintf(pvalue_as_str, ", 0x%02X", *(pdata+position+i));
						pvalue_as_str = pvalue_as_str + 6;
				}

				register_name[0] = 0;
				VL53L1_get_register_name(
						index+(uint16_t)position,
						register_name);

				trace_i2c(
						/* "WriteAutoIncrement(0x%04X%s); // %3u bytes\n",
						index+(uint16_t)position, */
						"WriteAutoIncrement(%s%s); // %3u bytes\n",
						register_name,
						value_as_str,
						data_size);
			}
#endif // VL53L1_LOG_ENABLE
		}

		result += i2c_master_stop(i2c_cmd_handle);
		result += i2c_master_cmd_begin(I2C_NUM_0, i2c_cmd_handle, 5000 / portTICK_PERIOD_MS);
		i2c_cmd_link_delete(i2c_cmd_handle);

		if(status != VL53L1_ERROR_NONE)
		{
			// RANGING_SENSOR_COMMS_Get_Error_Text(comms_error_string); /*lint !e534 ignoring return value */
			trace_i2c("VL53L1_WriteMulti RANGING_SENSOR_COMMS_Write_CCI() failed\n");
			trace_i2c(comms_error_string);
		}
	}
	else if(global_comms_type == VL53L1_SPI)
	{
		// if((CP_STATUS)RANGING_SENSOR_COMMS_Write_SPI_16I(0, 0, index, pdata, count) != CP_STATUS_OK)
		// {
		// 	status = VL53L1_ERROR_CONTROL_INTERFACE;
		// }

		// if(status != VL53L1_ERROR_NONE)
		// {
		// 	RANGING_SENSOR_COMMS_Get_Error_Text(comms_error_string); /*lint !e534 ignoring return value */
		// 	trace_i2c("VL53L1_WriteMulti RANGING_SENSOR_COMMS_Write_SPI_16I() failed\n");
		// 	trace_i2c(comms_error_string);
		// }
	}
	else
	{
		trace_i2c("VL53L1_WriteMulti: Comms must be one of VL53L1_I2C or VL53L1_SPI\n");
		status = VL53L1_ERROR_CONTROL_INTERFACE;
	}

	return status;
}

VL53L1_Error VL53L1_ReadMulti(
	VL53L1_Dev_t *pdev,
	uint16_t      index,
	uint8_t      *pdata,
	uint32_t      count)
{
	VL53L1_Error status         = VL53L1_ERROR_NONE;
	uint32_t     position       = 0;
	uint32_t     data_size      = 0;

	// char   comms_error_string[ERROR_TEXT_LENGTH];

	_LOG_STRING_BUFFER(register_name);
	_LOG_STRING_BUFFER(value_as_str);

	if(global_comms_type == VL53L1_I2C)
	{
		i2c_cmd_handle_t i2c_cmd_handle = i2c_cmd_link_create();
		esp_err_t result = i2c_master_start(i2c_cmd_handle);
		result += i2c_master_write_byte(i2c_cmd_handle, (pdev->i2c_slave_address << 1) | WRITE_BIT, ACK_CHECK_EN);
		result += i2c_master_write_byte(i2c_cmd_handle, (uint8_t)index >> 8, ACK_CHECK_EN);
		result += i2c_master_write_byte(i2c_cmd_handle, (uint8_t)index, ACK_CHECK_EN);
		result += i2c_master_stop(i2c_cmd_handle);
		result += i2c_master_cmd_begin(I2C_NUM_0, i2c_cmd_handle, 5000 / portTICK_PERIOD_MS);
		i2c_cmd_link_delete(i2c_cmd_handle);

		i2c_cmd_handle = i2c_cmd_link_create();
		result += i2c_master_start(i2c_cmd_handle);
		result += i2c_master_write_byte(i2c_cmd_handle, (pdev->i2c_slave_address << 1) | READ_BIT, ACK_CHECK_EN);
		
		for(position=0; position<count; position+=VL53L1_COMMS_CHUNK_SIZE)
		{
			if(count > VL53L1_COMMS_CHUNK_SIZE)
			{
				if((position + VL53L1_COMMS_CHUNK_SIZE) > count)
				{
					data_size = count - position;
				}
				else
				{
					data_size = VL53L1_COMMS_CHUNK_SIZE;
				}
			}
			else
				data_size = count;

			if(status == VL53L1_ERROR_NONE)
			{
				// if( RANGING_SENSOR_COMMS_Read_CCI(
				// 				pdev->i2c_slave_address,
				// 				0,
				// 				index+position,
				// 				pdata+position,
				// 				data_size) != 0 )
				// {
				// 	status = VL53L1_ERROR_CONTROL_INTERFACE;
				// }
				if (i2c_master_read(
					i2c_cmd_handle,
					pdata + position,
					data_size,
					position >= count ? I2C_MASTER_NACK : I2C_MASTER_ACK
					) != ESP_OK)
				{

				}
			}
#ifdef VL53L1_LOG_ENABLE
			if(status == VL53L1_ERROR_NONE)
			{
				char* pvalue_as_str;
				uint32_t i;

				/*lint --e{661} Suppress out of bounds walkthrough warning */
				/*lint --e{662} Suppress out of bounds walkthrough warning */
				pvalue_as_str =  value_as_str;
				for(i = 0 ; i < data_size ; i++) {
					sprintf(pvalue_as_str, "0x%02X", *(pdata+position+i));
					if (i == 0) {
						pvalue_as_str = pvalue_as_str + 4;
					}
					else {
						pvalue_as_str = pvalue_as_str + 6;
					}
				}

				register_name[0] = 0;
				VL53L1_get_register_name(
						index+(uint16_t)position,
						register_name);

				trace_i2c(
						/* "ReadAutoIncrement(0x%04X,%3u); // = (%s)\n",
						index+(uint16_t)position, */
						"ReadAutoIncrement(%s,%3u); // = (%s)\n",
						register_name,
						data_size,
						value_as_str);
			}
#endif // VL53L1_LOG_ENABLE
		}

		result += i2c_master_stop(i2c_cmd_handle);
		result += i2c_master_cmd_begin(I2C_NUM_0, i2c_cmd_handle, 5000 / portTICK_PERIOD_MS);
		i2c_cmd_link_delete(i2c_cmd_handle);

		if(status != VL53L1_ERROR_NONE)
		{
			// RANGING_SENSOR_COMMS_Get_Error_Text(comms_error_string); /*lint !e534 ignoring return value */
			trace_i2c("VL53L1_ReadMulti: RANGING_SENSOR_COMMS_Read_CCI() failed\n");
			trace_i2c(comms_error_string);
		}
	}
	else if(global_comms_type == VL53L1_SPI)
	{
		// if((CP_STATUS)RANGING_SENSOR_COMMS_Read_SPI_16I(0, 0, index, pdata, count) != CP_STATUS_OK)
		// {
		// 	status = VL53L1_ERROR_CONTROL_INTERFACE;
		// }

		// if(status != VL53L1_ERROR_NONE)
		// {
		// 	RANGING_SENSOR_COMMS_Get_Error_Text(comms_error_string); /*lint !e534 ignoring return value */
		// 	trace_i2c("VL53L1_ReadMulti: RANGING_SENSOR_COMMS_Read_SPI_16I() failed\n");
		// 	trace_i2c(comms_error_string);
		// }
	}
	else
	{
		trace_i2c("VL53L1_ReadMulti: Comms must be one of VL53L1_I2C or VL53L1_SPI\n");
		status = VL53L1_ERROR_CONTROL_INTERFACE;
	}

	return status;
}

VL53L1_Error VL53L1_GetTickCount(
	uint32_t *ptick_count_ms)
{

	/* Returns current tick count in [ms] */

	VL53L1_Error status  = VL53L1_ERROR_NONE;

	// *ptick_count_ms = timeGetTime();
	*ptick_count_ms = xTaskGetTickCount();

	trace_print(
	VL53L1_TRACE_LEVEL_DEBUG,
	"VL53L1_GetTickCount() = %5u ms;\n",
	*ptick_count_ms);

	return status;

}
